--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,29 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>crudalunos</name>
+  <build>
+  	<finalName>crudalunos</finalName>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<configuration>
+				<source>1.7</source>
+				<target>1.7</target>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>tomcat-maven-plugin</artifactId>
+			<configuration>
+				<server>mytomcat</server>
+				<url>http://localhost:8080/manager/text</url>
+				<path>/crudalunos</path>
+			</configuration>
+		</plugin>
+	</plugins>
+  </build>
+  <dependencies>
+  </dependencies>
 </project>
