--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>tomcat-maven-plugin</artifactId>
 			<configuration>
-				<server>mytomcat</server>
+				<username>tomcat</username>
+		        <password>$53RVER!P45SW0Rd#</password>
 				<url>http://localhost:8080/manager/text</url>
 				<path>/${project.name}</path>
 			</configuration>
