atualização de dependencias do primefaces

--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,20 @@
 	</plugins>
   </build>
   <dependencies>
+	  <dependency>
+	  	<groupId>com.sun.faces</groupId>
+	  	<artifactId>jsf-api</artifactId>
+	  	<version>2.2.13</version>
+	  </dependency>
+	  <dependency>
+	  	<groupId>com.sun.faces</groupId>
+	  	<artifactId>jsf-impl</artifactId>
+	  	<version>2.2.13</version>
+	  </dependency>
+	  <dependency>
+	  	<groupId>org.primefaces</groupId>
+	  	<artifactId>primefaces</artifactId>
+	  	<version>5.3</version>
+	  </dependency>
   </dependencies>
 </project>
